<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.LoginActivity"
    android:background="@color/colorPrimaryDark"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_email"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_password"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_log_in"
        style="@style/Widget.AppCompat.Button.Colored"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tvFrgPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_forgot_your_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:padding="5dp"
        android:layout_marginRight="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintRight_toRightOf="parent"
        android:focusable="true"
        android:clickable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>